# open_harness

./: .gitignore  README.md  config.yaml  open_harness.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: external_agents.md  external_agents_ja.md  optimization_plan.md  project_analysis.md  redesign_plan.md  tutorial.md  tutorial_ja.md  v2_migration_review_report.md  v2_remaining_plan.md
src/open_harness/: __init__.py  __main__.py  agent.py  checkpoint.py  cli.py  completer.py  config.py  diagnostics.py  planner.py  policy.py  project.py  setup_wizard.py
src/open_harness_v2/: __init__.py  approval.py  cli.py  config.py  project_instructions.py  setup.py  todo.py  types.py  update.py
tests/: test_ask_user.py  test_cancel_command.py  test_cancellation.py  test_config_errors.py  test_context_trimming.py  test_edit_fuzzy.py  test_goal_success.py  test_policy_cwd.py  test_project_tree.py  test_session_persistence.py  test_tool_recovery.py
tests/_legacy/: test_ask_user.py  test_cancellation.py  test_context_trimming.py  test_diagnostics.py  test_edit_fuzzy.py  test_external_streaming.py  test_mode_rename.py  test_output_filter.py  test_parallel_external.py  test_policy_cwd.py  test_project_scope.py  test_project_tree.py  test_retry_backoff.py  test_session_dedup.py  test_shell_env.py  test_streaming_tool_calls.py  test_token_budget.py  test_v050_features.py
tests/fixtures/: create_test_project.py
tests/v2/: conftest.py  test_builtin_tools.py  test_checkpoint.py  test_cli.py  test_config.py  test_context.py  test_error_recovery.py  test_event_bus.py  test_executor.py  test_external_tools.py  test_goal_complexity.py  test_hooks.py  test_integration.py  test_llm_client.py  test_memory.py  test_metrics_collector.py  test_middleware.py  test_orchestrator.py  test_planner.py  test_policy_engine.py  test_project_instructions.py  (+15 more)
(+93 files in other folders)
