[project]
name = "open-harness"
version = "0.3.1"
description = "AI agent harness optimized for local LLMs with weak-model compensation"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "click>=8.0",
]

[project.scripts]
harness = "open_harness.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/open_harness"]

[tool.ruff]
line-length = 100
target-version = "py311"
